Flatten `createdAt` field
