# src/routes/orders/orders.controller.ts
@@ -23,7 +23,7 @@ const router = Router();
 const orderResponse = fql`{
     id: order.id,
     payment: order.payment,
-    createdAt: order.createdAt,
+    createdAt: order.createdAt.toString(),
     status: order.status,
     total: order.total,
     items: order.items.toArray().map((item) => {
